Add multipart support to ApiListener response, with first couple of tests.